[gd_scene load_steps=11 format=3 uid="uid://c1rcdg1ule36s"]

[ext_resource type="PackedScene" uid="uid://crjqsjwl2q87i" path="res://scenes/prefab/gate.tscn" id="1_p2cjx"]
[ext_resource type="Script" path="res://scripts/level_9.gd" id="1_veern"]
[ext_resource type="PackedScene" uid="uid://ctmp7o4ijahp2" path="res://scenes/prefab/player.tscn" id="2_ou8ls"]
[ext_resource type="PackedScene" uid="uid://bb80ejp6p3y0w" path="res://scenes/prefab/side_wall.tscn" id="3_3gas6"]
[ext_resource type="PackedScene" uid="uid://ds5xwtjbwixmf" path="res://scenes/prefab/fallout_zone.tscn" id="4_bb6lk"]
[ext_resource type="PackedScene" uid="uid://wi1yeq0iuogq" path="res://scenes/prefab/platform_parent.tscn" id="5_3cfh1"]
[ext_resource type="PackedScene" uid="uid://q5v5cu784eqv" path="res://scenes/prefab/escape_button.tscn" id="6_0tupj"]
[ext_resource type="PackedScene" uid="uid://33uwh1dq2no8" path="res://scenes/prefab/settings_button.tscn" id="7_jjiea"]
[ext_resource type="PackedScene" uid="uid://dfqvhh6of6soq" path="res://scenes/prefab/game_button.tscn" id="8_vvyvb"]
[ext_resource type="PackedScene" uid="uid://bo47qdnkp8vql" path="res://scenes/prefab/spikes_parent.tscn" id="9_xt81y"]

[node name="Level_9" type="Node2D"]
script = ExtResource("1_veern")
metadata/_edit_vertical_guides_ = [560.0, 300.0, 820.0]

[node name="Gate" parent="." instance=ExtResource("1_p2cjx")]
position = Vector2(1113, 517)

[node name="Player" parent="." instance=ExtResource("2_ou8ls")]
position = Vector2(60, 516)

[node name="SideWall" parent="." instance=ExtResource("3_3gas6")]
position = Vector2(-17, 338)

[node name="SideWall2" parent="." instance=ExtResource("3_3gas6")]
position = Vector2(1169, 338)

[node name="FalloutZone" parent="." instance=ExtResource("4_bb6lk")]
position = Vector2(578, 684)

[node name="EscapeButton" parent="." instance=ExtResource("6_0tupj")]

[node name="SettingsButton" parent="." instance=ExtResource("7_jjiea")]
offset_left = 1080.0
offset_top = 10.0
offset_right = 1205.0
offset_bottom = 135.0

[node name="Game-Button" parent="." instance=ExtResource("8_vvyvb")]
position = Vector2(300, 506)
scale = Vector2(2, 2)

[node name="Game-Button2" parent="." instance=ExtResource("8_vvyvb")]
position = Vector2(560, 506)
scale = Vector2(2, 2)

[node name="Game-Button3" parent="." instance=ExtResource("8_vvyvb")]
position = Vector2(820, 506)
scale = Vector2(2, 2)

[node name="Spikes-Parent" parent="." instance=ExtResource("9_xt81y")]
position = Vector2(41, 523)

[node name="Platform-Parent" parent="." instance=ExtResource("5_3cfh1")]
position = Vector2(576, 561)
scale = Vector2(19.2, 1)

[node name="Platform-Parent2" parent="." instance=ExtResource("5_3cfh1")]
position = Vector2(1025, 249)
rotation = 1.5708
scale = Vector2(8.5, 1)

[node name="Platform-Parent3" parent="." instance=ExtResource("5_3cfh1")]
position = Vector2(1025, 510)
rotation = 1.5708
scale = Vector2(0.2, 1)

[connection signal="body_entered" from="Game-Button" to="." method="_on_game_button_body_entered"]
[connection signal="body_entered" from="Game-Button2" to="." method="_on_game_button_2_body_entered"]
[connection signal="body_entered" from="Game-Button3" to="." method="_on_game_button_3_body_entered"]
